Re-init: Replaced source with AshwinR64's

--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -128,7 +128,7 @@ gFixedRate=0
 
 # RTS threshold
 
-RTSThreshold=2346
+RTSThreshold=2347
 
 
 # Intra-BSS forward
@@ -398,7 +398,7 @@ gEnableMacAddrSpoof=1
 #Set RPS CPU mask
 rps_mask=0f
 
-#Force split scan
+#wifi ping test
 gEnableDynSplitScan=0
 
 END
