--- a/gps/etc/izat.conf
+++ b/gps/etc/izat.conf
@@ -41,8 +41,8 @@ NLP_COMBO_MODE_USES_QNP_WITH_NO_EULA_CONSENT = 1
 # NLP PACKAGE AND ACTION SETTINGS
 #########################################
 # OSNLP_PACKAGE/OSNLP_ACTION: name/action of default NLP package
-#OSNLP_PACKAGE = com.google.android.gms
-#OSNLP_ACTION = com.android.location.service.v3.NetworkLocationProvider
+OSNLP_PACKAGE = com.google.android.gms
+OSNLP_ACTION = com.android.location.service.v3.NetworkLocationProvider
 # REGION_OSNLP_PACKAGE/REGION_OSNLP_ACTION:
 # These two values will be used as alternative
 # for particular region where default NLP is not functional.
@@ -168,7 +168,7 @@ HARDWARE_TYPE=automotive
 #DISABLED -> if this process is to be disabled on lean and mean targets
 PROCESS_NAME=/system/bin/garden_app
 PROCESS_ARGUMENT=-u 0 -q 0 -j 0 -g 0 -l 0 -Z 0 -T 1
-PROCESS_STATE=DISABLED
+PROCESS_STATE=ENABLED
 PROCESS_GROUPS=gps
 PREMIUM_FEATURE=0
 IZAT_FEATURE_MASK=0
