--- a/rootdir/init.target.rc
+++ b/rootdir/init.target.rc
@@ -56,6 +56,9 @@ on post-fs-data
     mkdir /persist/qti_fp 0700 system system
     mkdir /data/misc/seemp 0700 system system
     mkdir /data/misc/audio_pp 0771 media audio
+    
+    mkdir /data/thermal 0771 system system
+    mkdir /data/thermal/config 0771 system system
 
 #Create folder for mm-qcamera-daemon
 mkdir /data/vendor/camera 0770 camera camera
