oxygen: wifi: Smarter decisions on whether to use 2/5Ghz AP
 * Implement a smarter system on whether to connect to the provided 2Ghz or 5Ghz network.

Change-Id: I824d6fbae73a899131d5aa3e42e9541d9cce0a10

--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -184,7 +184,10 @@ RoamRssiDiff=5
 
 #gAPCntryCode=USI
 
+# TheCrazyLex@PA Prefer connecting to 5Ghz AP
+# even if its RSSI is lower by 3dBm than the 2.4Ghz AP
 # Sets RSSI preference for 5GHz over 2.4GHz AP
+gRoamPrefer5GHz=1
 gSelect5GHzMargin=5
 
 #Short Guard Interval Enable/disable
