--- a/configs/gps/gps.conf
+++ b/configs/gps/gps.conf
@@ -16,6 +16,7 @@ ERR_ESTIMATE=0
 
 #NTP server
 NTP_SERVER=1.android.pool.ntp.org
+NTP_SERVER_2=0.cn.pool.ntp.org
 
 #XTRA CA path
 XTRA_CA_PATH=/usr/lib/ssl-1.1/certs
